@@ -5,9 +5,8 @@ import dev.rosewood.rosegarden.locale.Locale;
 import dev.rosewood.rosestacker.RoseStacker;
 import dev.rosewood.rosestacker.manager.ConversionManager;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 public class DutchLocale implements Locale {
@@ -38,20 +37,29 @@ public class DutchLocale implements Locale {
             this.put("spawner-stack-display", "&c%amount%x &7%name%");
             this.put("spawner-stack-display-single", "&7%name%");
 
+            this.put("#1.1", "Hologram Display Tags");
+            this.put("#1.2", "Available spawner placeholders: %name%, %amount%, %max_amount%, %time_remaining%, %ticks_remaining%, %total_spawned%");
+            this.put("#1.3", "Multiple lines are supported");
+            this.put("block-hologram-display", List.of("&c%amount%x &7%name%"));
+            this.put("spawner-hologram-display", List.of("&c%amount%x &7%name%"));
+            this.put("spawner-hologram-display-single", List.of("&7%name%"));
+
             this.put("#2", "Base Command Message");
             this.put("base-command-color", "&e");
-            this.put("base-command-help", "&eUse &b/rs help &evoor commando informatie.");
+            this.put("base-command-help", "&eUse &b/%cmd% help &evoor commando informatie.");
 
             this.put("#3", "Help Command");
-            this.put("command-help-description", "&8 - &d/rs help &7- Weergeeft het help menu... Je bent gearriveerd!");
+            this.put("command-help-description", "Weergeeft het help menu... Je bent gearriveerd!");
             this.put("command-help-title", "&eBeschikbare commando's:");
+            this.put("command-help-list-description", "&8 - &d/%cmd% %subcmd% %args% &7- %desc%");
+            this.put("command-help-list-description-no-args", "&8 - &d/%cmd% %subcmd% &7- %desc%");
 
             this.put("#4", "Reload Command");
-            this.put("command-reload-description", "&8 - &d/rs reload &7- Herlaad de plugin");
+            this.put("command-reload-description", "Herlaad de plugin");
             this.put("command-reload-reloaded", "&ePlugin data, configuration, and locale files were reloaded.");
 
             this.put("#5", "Give Command");
-            this.put("command-give-description", "&8 - &d/rs give &7- Geef vooraf gestackte items");
+            this.put("command-give-description", "Geef vooraf gestackte items");
             this.put("command-give-usage", "&cUsage: &e/rs give <block|spawner|entity> <player> <type> [stackGrote] [hoeveelheid]");
             this.put("command-give-given", "&eGave &b%player% &e[%display%&e].");
             this.put("command-give-given-multiple", "&eGave &b%player% &e%amount%x [%display%&e].");
@@ -59,28 +67,29 @@ public class DutchLocale implements Locale {
             this.put("command-give-too-large", "&cDe hoeveelheid dat je hebt ingegeven overschrijd de maximum stackgrootte.");
 
             this.put("#6", "Clearall Command");
-            this.put("command-clearall-description", "&8 - &d/rs clearall &7- Wist alles van een type stack");
+            this.put("command-clearall-description", "Wist alles van een type stack");
             this.put("command-clearall-killed-entities", "&eCleared &b%amount% &eentity stacks.");
             this.put("command-clearall-killed-items", "&eCleared &b%amount% &eitem stacks.");
             this.put("command-clearall-killed-all", "&eCleared &b%entityAmount% &eentity stacks en &b%itemAmount% &eitem stacks.");
 
             this.put("#7", "Stats Command");
-            this.put("command-stats-description", "&8 - &d/rs stats &7- Geef statistieken van de plugin weer");
+            this.put("command-stats-description", "Geef statistieken van de plugin weer");
             this.put("command-stats-header", "&aHuidige plugin statistieken:");
             this.put("command-stats-threads", "&b%amount% &eActieve stacking threads.");
             this.put("command-stats-stacked-entities", "&b%stackAmount% &eEntity stacks geladen, totaal van &b%total% &eentities.");
             this.put("command-stats-stacked-items", "&b%stackAmount% &eItem stacks geladen, totaal van &b%total% &eitems.");
             this.put("command-stats-stacked-blocks", "&b%stackAmount% &eBlok stacks geladen, totaal van &b%total% &eblocks.");
             this.put("command-stats-stacked-spawners", "&b%stackAmount% &eSpawner stacks geladen, totaal van &b%total% &espawners.");
+            this.put("command-stats-active-tasks", "&b%amount% &eactieve taken.");
 
             this.put("#8", "Convert Command");
-            this.put("command-convert-description", "&8 - &d/rs convert &7- Converteert data van een andere plugin");
+            this.put("command-convert-description", "Converteert data van een andere plugin");
             this.put("command-convert-converted", "&eData van &b%plugin% &eto RoseStacker geconverteerd. De geconverteerde data is uigeschakeld. Zorg zeker dat je de geconverteerde plugin uit je plugin folder verwijderd.");
             this.put("command-convert-failed", "&cConverteren mislukt &b%plugin%&c, de plugin is niet ingeschakeld.");
             this.put("command-convert-aborted", "&cPogin tot converteren geanuleerd &b%plugin%&c. Je hebt al geconverteerd van een andere stack plugin.");
 
             this.put("#9", "Translate Command");
-            this.put("command-translate-description", "&8 - &d/rs translate &7- Vertaald de stack namen");
+            this.put("command-translate-description", "Vertaald de stack namen");
             this.put("command-translate-loading", "&eDownloaden en implementeren van stack vertaling data, dit kan even duren.");
             this.put("command-translate-failure", "&cStack data vertalen was niet mogelijk. Er was een probleem met het ophalen van de lokale data. Probeer het later opnieuw.");
             this.put("command-translate-invalid-locale", "&cNiet mogelijk om stack namen te vertalen. De taal die je hebt opgegeven is ongeldig.");
@@ -89,9 +98,10 @@ public class DutchLocale implements Locale {
             this.put("command-translate-success", "&aStack namen zijn succesvol vertaald.");
 
             this.put("#10", "Stacking Tool Command");
-            this.put("command-stacktool-description", "&8 - &d/rs stacktool &7- Geeft de speler het stack tool");
+            this.put("command-stacktool-description", "Geeft de speler het stack tool");
             this.put("command-stacktool-given", "&eJe hebt het stacking tool ontvangen.");
             this.put("command-stacktool-given-other", "&b%player% &aheeft het stacking tool ontvangen.");
+            this.put("command-stacktool-no-console", "&cJe kan geen stack tool geven aan de console.");
             this.put("command-stacktool-no-permission", "&cJe hebt geen permissie om het stacking tool te gebruiken.");
             this.put("command-stacktool-invalid-entity", "&cDeze entity is geen deel van een stack, is het een custom mob?");
             this.put("command-stacktool-marked-unstackable", "&eDe &b%type% &eis gemarkeerd als &cunstackable&e.");
@@ -121,12 +131,12 @@ public class DutchLocale implements Locale {
 
             this.put("#11", "Stacked Block GUI");
             this.put("gui-stacked-block-title", "Wijzigen van %name% Stack");
-            this.put("gui-stacked-block-page-back", Collections.singletonList("&eVorige pagina (" + GuiUtil.PREVIOUS_PAGE_NUMBER_PLACEHOLDER + "/" + GuiUtil.MAX_PAGE_NUMBER_PLACEHOLDER + ")"));
-            this.put("gui-stacked-block-page-forward", Collections.singletonList("&eVolgende pagina (" + GuiUtil.PREVIOUS_PAGE_NUMBER_PLACEHOLDER + "/" + GuiUtil.MAX_PAGE_NUMBER_PLACEHOLDER + ")"));
-            this.put("gui-stacked-block-destroy", Arrays.asList("&cStack slopen", "&eDit sloopt de stack en laat de items vallen"));
+            this.put("gui-stacked-block-page-back", List.of("&eVorige pagina (" + GuiUtil.PREVIOUS_PAGE_NUMBER_PLACEHOLDER + "/" + GuiUtil.MAX_PAGE_NUMBER_PLACEHOLDER + ")"));
+            this.put("gui-stacked-block-page-forward", List.of("&eVolgende pagina (" + GuiUtil.PREVIOUS_PAGE_NUMBER_PLACEHOLDER + "/" + GuiUtil.MAX_PAGE_NUMBER_PLACEHOLDER + ")"));
+            this.put("gui-stacked-block-destroy", List.of("&cStack slopen", "&eDit sloopt de stack en laat de items vallen"));
             this.put("gui-stacked-block-destroy-title", "Block stack slopen?");
-            this.put("gui-stacked-block-destroy-confirm", Arrays.asList("&aBevestigen", "&eJaa, sloop de stack"));
-            this.put("gui-stacked-block-destroy-cancel", Arrays.asList("&cAnnuleer", "&eNee, keer terug naar het vorige scherm"));
+            this.put("gui-stacked-block-destroy-confirm", List.of("&aBevestigen", "&eJaa, sloop de stack"));
+            this.put("gui-stacked-block-destroy-cancel", List.of("&cAnnuleer", "&eNee, keer terug naar het vorige scherm"));
 
             this.put("#12", "Stacked Spawner GUI");
             this.put("gui-stacked-spawner-title", "Bekijken van %name%");
@@ -190,33 +200,33 @@ public class DutchLocale implements Locale {
             this.put("spawner-condition-not-player-placed-invalid", "Moet geplaatst worden door een speler");
 
             this.put("#14", "Given Stack Item Lore");
-            this.put("#15", "Note: This will appear in the lore of the items give from the '/rs give' command");
+            this.put("#15", "Note: This will appear in the lore of the items given from the '/rs give' command");
             this.put("stack-item-lore-spawner", new ArrayList<>());
             this.put("stack-item-lore-block", new ArrayList<>());
             this.put("stack-item-lore-entity", new ArrayList<>());
 
-            this.put("#16", "ACF-Core Messages");
-            this.put("acf-core-permission-denied", "&cJe hebt hier geen toestemming voor!");
-            this.put("acf-core-permission-denied-parameter", "&cJe hebt hier geen toestemming voor!");
-            this.put("acf-core-error-generic-logged", "&cEr is een fout opgetreden. Geef dit doort aan de auteur.");
-            this.put("acf-core-error-performing-command", "&cEr is een fout opgetreden tijden het uitvoeren van dit commando.");
-            this.put("acf-core-unknown-command", "&cOnbekend commando. Use &b/rs&c voor commando's.");
-            this.put("acf-core-invalid-syntax", "&cGebruik: &e{command}&e {syntax}");
-            this.put("acf-core-error-prefix", "&cFout: {message}");
-            this.put("acf-core-info-message", "&e{message}");
-            this.put("acf-core-please-specify-one-of", "&cFout: Er was een ongeldig argument gegeven.");
-            this.put("acf-core-must-be-a-number", "&cFout: &b{num}&c must be a number.");
-            this.put("acf-core-must-be-min-length", "&cFout: Moet minstens &b{min}&c karakters lang zijn.");
-            this.put("acf-core-must-be-max-length", "&cFout: Moet maximum &b{max}&c karakters lang zijn.");
-            this.put("acf-core-please-specify-at-most", "&cFout: Geef een waarde van maximum &b{max}&c.");
-            this.put("acf-core-please-specify-at-least", "&cFout: Geef een waarde van minimum &b{min}&c.");
-            this.put("acf-core-not-allowed-on-console", "&cAlleen spelers mogen dit commando uitvoeren.");
-            this.put("acf-core-could-not-find-player", "&cFout: Kon geen speler vinden met deze naam: &b{search}");
-            this.put("acf-core-no-command-matched-search", "&cFout: Geen commando komt overeen met &b{search}&c.");
+            this.put("#16", "Generic Command Messages");
+            this.put("no-permission", "&cJe hebt hier geen toestemming voor!");
+            this.put("only-player", "&cDit commando kan alleen word uitgevoerd door een speler.");
+            this.put("unknown-command", "&cOnbekend commando, gebruik &b/%cmd% help &cvoor meer info.");
+            this.put("unknown-command-error", "&cEen onbekende error is opgetreden; details zijn naar de console gestuurd. Contacteer aub een administrator.");
+            this.put("invalid-subcommand", "&cOngeldig subcommando.");
+            this.put("invalid-argument", "&cOngeldig argument: %message%.");
+            this.put("invalid-argument-null", "&cOngeldig argument: %name% was null.");
+            this.put("missing-arguments", "&cMissende argumenten, &b%amount% &cvereist.");
+            this.put("missing-arguments-extra", "&cMissende argumenten, &b%amount%+ &cvereist.");
 
-            this.put("#17", "ACF-Minecraft Messages");
-            this.put("acf-minecraft-no-player-found-server", "&cFout: Kon geen speler vinden met de naam: &b{search}");
-            this.put("acf-minecraft-is-not-a-valid-name", "&cFout: &b{name} &cis geen geldige speler naam.");
+            this.put("#17", "Argument Handler Error Messages");
+            this.put("argument-handler-enum", "%enum% type [%input%] bestaat niet");
+            this.put("argument-handler-enum-list", "%enum% type [%input%] bestaat niet. Geldige types: %types%");
+            this.put("argument-handler-string", "Tekenreeks mag niet leeg zijn");
+            this.put("argument-handler-integer", "Getal [%input%] moet een nummer zijn tussen -2^31 en 2^31-1 inclusief");
+            this.put("argument-handler-player", "Er is geen speler met de naam [%input%] online gevonden");
+            this.put("argument-handler-stackplugin", "Geen plugin met dezelfde [%input%] was gevonden");
+            this.put("argument-handler-material", "Geen materiaal met de naam [%input%] gevonden");
+            this.put("argument-handler-stackamount", "De stack grootte [%input%] is ongeldig, het nummer moet groter zijn dan 0");
+            this.put("argument-handler-stacktype", "Het stack type [%input%] is ongeldig");
+            this.put("argument-handler-translationlocale", "De vertaling folder [%input%] is ongeldig");
 
             this.put("#18", "Convert Lock Messages");
             this.put("convert-lock-conflictions", "&cEr zijn plugin op je server die gekend zijn om te rotzooien met RoseStacker. " +
