@@ -3,7 +3,6 @@ package dev.rosewood.rosestacker.spawner.conditions.tags;
 import dev.rosewood.rosestacker.manager.LocaleManager;
 import dev.rosewood.rosestacker.spawner.conditions.ConditionTag;
 import dev.rosewood.rosestacker.stack.StackedSpawner;
-import java.util.Collections;
 import java.util.List;
 import org.bukkit.block.Block;
 
@@ -35,7 +34,7 @@ public class AboveYAxisConditionTag extends ConditionTag {
 
     @Override
     protected List<String> getInfoMessageValues(LocaleManager localeManager) {
-        return Collections.singletonList(String.valueOf(this.yValue));
+        return List.of(String.valueOf(this.yValue));
     }
 
 }
