@@ -3,9 +3,9 @@ package dev.rosewood.rosestacker.spawner.conditions.tags;
 import dev.rosewood.rosestacker.manager.LocaleManager;
 import dev.rosewood.rosestacker.spawner.conditions.ConditionTag;
 import dev.rosewood.rosestacker.stack.StackedSpawner;
+import dev.rosewood.rosestacker.utils.EntityUtils;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.bukkit.Material;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockFace;
@@ -20,7 +20,7 @@ public class BlockConditionTag extends ConditionTag {
 
     @Override
     public boolean check(StackedSpawner stackedSpawner, Block spawnBlock) {
-        return this.blocks.contains(spawnBlock.getRelative(BlockFace.DOWN).getType());
+        return this.blocks.contains(EntityUtils.getLazyBlockMaterial(spawnBlock.getRelative(BlockFace.DOWN).getLocation()));
     }
 
     @Override
@@ -43,7 +43,7 @@ public class BlockConditionTag extends ConditionTag {
 
     @Override
     protected List<String> getInfoMessageValues(LocaleManager localeManager) {
-        return this.blocks.stream().map(Enum::name).collect(Collectors.toList());
+        return this.blocks.stream().map(Enum::name).toList();
     }
 
 }
