@@ -5,7 +5,6 @@ import dev.rosewood.rosegarden.utils.NMSUtil;
 import dev.rosewood.rosestacker.manager.ConfigurationManager.Setting;
 import dev.rosewood.rosestacker.utils.StackerUtils;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.Material;
 
@@ -13,7 +12,7 @@ public class BlockStackSettings extends StackSettings {
 
     private static final List<Material> enabledByDefault;
     static {
-        enabledByDefault = new ArrayList<>(Arrays.asList(Material.DIAMOND_BLOCK, Material.GOLD_BLOCK, Material.IRON_BLOCK, Material.EMERALD_BLOCK, Material.LAPIS_BLOCK));
+        enabledByDefault = new ArrayList<>(List.of(Material.DIAMOND_BLOCK, Material.GOLD_BLOCK, Material.IRON_BLOCK, Material.EMERALD_BLOCK, Material.LAPIS_BLOCK));
         if (NMSUtil.getVersionNumber() >= 16)
             enabledByDefault.add(Material.NETHERITE_BLOCK);
     }
