@@ -17,7 +17,6 @@ import dev.rosewood.rosestacker.utils.StackerUtils;
 import java.lang.reflect.Type;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.bukkit.Material;
 import org.bukkit.entity.AbstractHorse;
 import org.bukkit.entity.Ageable;
@@ -30,6 +29,7 @@ import org.bukkit.entity.LivingEntity;
 import org.bukkit.entity.Mob;
 import org.bukkit.entity.Raider;
 import org.bukkit.entity.Sittable;
+import org.bukkit.entity.SpawnCategory;
 import org.bukkit.entity.Tameable;
 import org.bukkit.entity.Turtle;
 import org.bukkit.inventory.EntityEquipment;
@@ -92,8 +92,9 @@ public abstract class EntityStackSettings extends StackSettings {
         List<String> defaultSpawnRequirements = gson.fromJson(entityTypeDataObject.get("default_spawn_requirements").getAsJsonArray(), stringListType);
         String skullTexture = entityTypeDataObject.get("skull_texture").getAsString();
         List<String> breedingMaterialsStrings = gson.fromJson(entityTypeDataObject.get("breeding_materials").getAsJsonArray(), stringListType);
-        List<Material> breedingMaterials = breedingMaterialsStrings.stream().map(Material::getMaterial).filter(Objects::nonNull).collect(Collectors.toList());
-        this.entityTypeData = new EntityTypeData(isSwimmingMob, isFlyingMob, spawnEggMaterial, defaultSpawnRequirements, skullTexture, breedingMaterials);
+        List<Material> breedingMaterials = breedingMaterialsStrings.stream().map(Material::getMaterial).filter(Objects::nonNull).toList();
+        SpawnCategory spawnCategory = SpawnCategory.valueOf(entityTypeDataObject.get("spawn_category").getAsString());
+        this.entityTypeData = new EntityTypeData(isSwimmingMob, isFlyingMob, spawnEggMaterial, defaultSpawnRequirements, skullTexture, breedingMaterials, spawnCategory);
 
         this.enabled = this.settingsConfiguration.getBoolean("enabled");
         this.displayName = this.settingsConfiguration.getString("display-name");
@@ -219,15 +220,21 @@ public abstract class EntityStackSettings extends StackSettings {
         LivingEntity entity1 = stack1.getEntity();
         LivingEntity entity2 = stack2.getEntity();
 
-        if (entity1.getType() != entity2.getType())
-            return EntityStackComparisonResult.DIFFERENT_ENTITY_TYPES;
+        boolean isSameEntity = entity1 == entity2;
+        int offset = comparingForUnstack ? -1 : 0;
+        if (isSameEntity) {
+            if (stack1.getStackSize() + 1 + offset > this.getMaxStackSize())
+                return EntityStackComparisonResult.STACK_SIZE_TOO_LARGE;
+        } else {
+            if (entity1.getType() != entity2.getType())
+                return EntityStackComparisonResult.DIFFERENT_ENTITY_TYPES;
+
+            if (stack1.getStackSize() + stack2.getStackSize() + offset > this.getMaxStackSize())
+                return EntityStackComparisonResult.STACK_SIZE_TOO_LARGE;
+        }
 
         if (!this.enabled)
             return EntityStackComparisonResult.STACKING_NOT_ENABLED;
-
-        int offset = comparingForUnstack ? -1 : 0;
-        if (stack1.getStackSize() + stack2.getStackSize() + offset > this.getMaxStackSize())
-            return EntityStackComparisonResult.STACK_SIZE_TOO_LARGE;
 
         if (PersistentDataUtils.isUnstackable(entity1) || PersistentDataUtils.isUnstackable(entity2))
             return EntityStackComparisonResult.MARKED_UNSTACKABLE;
@@ -273,6 +280,9 @@ public abstract class EntityStackSettings extends StackSettings {
                     if (equipment2.getItem(equipmentSlot).getType() != Material.AIR)
                         return EntityStackComparisonResult.HAS_EQUIPMENT;
         }
+
+        if (isSameEntity)
+            return EntityStackComparisonResult.CAN_STACK;
 
         if (this.isEntityColorable()) {
             Colorable colorable1 = (Colorable) entity1;
