@@ -17,12 +17,10 @@ import dev.rosewood.rosestacker.stack.settings.SpawnerStackSettings;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.bukkit.ChatColor;
 import org.bukkit.DyeColor;
 import org.bukkit.GameMode;
@@ -142,7 +140,7 @@ public final class ItemUtils {
             return itemStack;
 
         BlockStackSettings stackSettings = RoseStacker.getInstance().getManager(StackSettingManager.class).getBlockStackSettings(material);
-        StringPlaceholders placeholders = StringPlaceholders.builder("amount", amount).addPlaceholder("name", stackSettings.getDisplayName()).build();
+        StringPlaceholders placeholders = StringPlaceholders.builder("amount", StackerUtils.formatNumber(amount)).addPlaceholder("name", stackSettings.getDisplayName()).build();
         String displayString = RoseStacker.getInstance().getManager(LocaleManager.class).getLocaleMessage("block-stack-display", placeholders);
 
         itemMeta.setDisplayName(displayString);
@@ -172,7 +170,7 @@ public final class ItemUtils {
             return itemStack;
 
         SpawnerStackSettings stackSettings = RoseStacker.getInstance().getManager(StackSettingManager.class).getSpawnerStackSettings(entityType);
-        StringPlaceholders placeholders = StringPlaceholders.builder("amount", amount).addPlaceholder("name", stackSettings.getDisplayName()).build();
+        StringPlaceholders placeholders = StringPlaceholders.builder("amount", StackerUtils.formatNumber(amount)).addPlaceholder("name", stackSettings.getDisplayName()).build();
         String displayString;
         if (amount == 1) {
             displayString = RoseStacker.getInstance().getManager(LocaleManager.class).getLocaleMessage("spawner-stack-display-single", placeholders);
@@ -217,7 +215,7 @@ public final class ItemUtils {
         if (itemMeta == null)
             return itemStack;
 
-        StringPlaceholders placeholders = StringPlaceholders.builder("amount", amount).addPlaceholder("name", stackSettings.getDisplayName()).build();
+        StringPlaceholders placeholders = StringPlaceholders.builder("amount", StackerUtils.formatNumber(amount)).addPlaceholder("name", stackSettings.getDisplayName()).build();
         String displayString = RoseStacker.getInstance().getManager(LocaleManager.class).getLocaleMessage("entity-stack-display-spawn-egg", placeholders);
 
         itemMeta.setDisplayName(displayString);
@@ -322,7 +320,7 @@ public final class ItemUtils {
         }
 
         String name = HexUtils.colorify(ConfigurationManager.Setting.STACK_TOOL_NAME.getString());
-        List<String> lore = ConfigurationManager.Setting.STACK_TOOL_LORE.getStringList().stream().map(HexUtils::colorify).collect(Collectors.toList());
+        List<String> lore = ConfigurationManager.Setting.STACK_TOOL_LORE.getStringList().stream().map(HexUtils::colorify).toList();
 
         ItemStack item = new ItemStack(material);
         ItemMeta meta = item.getItemMeta();
@@ -346,7 +344,7 @@ public final class ItemUtils {
     public static List<ItemStack> getMultipliedItemStack(ItemStack itemStack, double multiplier) {
         int amount = (int) Math.round(itemStack.getAmount() * multiplier);
         if (amount == 0)
-            return Collections.emptyList();
+            return List.of();
 
         List<ItemStack> items = new ArrayList<>();
         while (amount > 0) {
